tests/errors/index/at_str_out_of_range.ark
(let a "a")
(@ a 1)
